- Added common docs for OpenSearch. - Updated README.md in /apps.